fix white space

--- a/source/_assets/scss/_hero.scss
+++ b/source/_assets/scss/_hero.scss
@@ -10,7 +10,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center top;
-  margin-top: 116px;
+  margin-top: 76px;
   padding-top: 127px;
   padding-bottom: 88px;
   min-height: 1210px;
